# imessage-exporter

./: Cargo.toml  build.sh  imessage_parser.py
imessage-database/: Cargo.toml
imessage-database/src/tables/: attachment.rs  chat.rs  chat_handle.rs  handle.rs  messages.rs
imessage-stats/: Cargo.toml
imessage-stats/src/: main.rs
