[package]
exclude = [".github", "docs", "build.sh"]
name = "imessage-stats"
version = "0.0.1"

[dependencies]
clap = { version = "4.4.8", features = ["cargo"] }
filetime = "0.2.22"
fs2 = "0.4.3"
imessage-database = {path = "../imessage-database"}
indicatif = "0.17.7"
rusqlite = { version = "0.30.0", features = ["blob", "bundled"] }
uuid = { version = "1.5.0", features = ["v4", "fast-rng"] }
serde_json = "1.0.85"
serde = { version = "1.0.166", features = ["derive"] }
